added the 3 window buttons functionality

--- a/src/Main.fxml
+++ b/src/Main.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Control">
    <top>
       <SplitPane dividerPositions="0.5" prefHeight="24.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
@@ -29,9 +28,9 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="24.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" text="Button" />
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" text="Button" />
-                  <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" text="Button" />
+                  <Button fx:id="minimizeB" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="24.0" text="1" />
+                  <Button mnemonicParsing="false" onAction="#maximize" prefHeight="24.0" prefWidth="24.0" text="2" />
+                  <Button mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="24.0" text="3" />
                </children>
             </HBox>
          </items>
