--- a/bin/application/windowStyling.css
+++ b/bin/application/windowStyling.css
@@ -1,3 +1,45 @@
+#titleBar{
+	-fx-background-color: #cccccc;
+}
+#title{
+	-fx-font-size: 14px;
+	-fx-font-style: italic;
+	-fx-font-weight: bold;
+	-fx-fill: #ffffff;
+}
+#titleIcon{
+	-fx-image: url(../../graphics/tempIcon.png); 
+}
+#minimizeB{
+	-fx-background-color: transparent;
+	-fx-background-image: url(../../graphics/minimizeb.png);
+	-fx-background-size: 24;
+	-fx-background-position: center;
+}
+#maximizeB{
+	-fx-background-color: transparent;
+	-fx-background-image: url(../../graphics/maximizeb.png);
+	-fx-background-size: 24;
+	-fx-background-position: center;
+}
+.restoreG#maximizeB{
+	-fx-background-color: transparent;
+	-fx-background-image: url(../../graphics/restoreb.png);
+	-fx-background-size: 24;
+	-fx-background-position: center;
+}
+.maximizeG#maximizeB{
+	-fx-background-color: transparent;
+	-fx-background-image: url(../../graphics/maximizeb.png);
+	-fx-background-size: 24;
+	-fx-background-position: center;
+}
+#closeB{
+	-fx-background-color: transparent;
+	-fx-background-image: url(../../graphics/closeb.png);
+	-fx-background-size: 24;
+	-fx-background-position: center;
+}
 
 /* Set all resize elements transparent */
 #TLrs{
