--- a/bin/WindowScene.fxml
+++ b/bin/WindowScene.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,9 +19,9 @@
                   <Font name="System Bold Italic" size="14.0" />
                </font>
             </Text>
-            <Button fx:id="minimizeB" layoutX="528.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="24.0" textAlignment="CENTER" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="maximizeB" layoutX="552.0" mnemonicParsing="false" onAction="#maximize" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="closeB" layoutX="576.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="minimizeB" layoutX="528.0" mnemonicParsing="false" onMouseClicked="#minimize" prefHeight="24.0" prefWidth="24.0" textAlignment="CENTER" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="maximizeB" layoutX="552.0" mnemonicParsing="false" onMouseClicked="#maximize" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="closeB" layoutX="576.0" mnemonicParsing="false" onMouseClicked="#close" prefHeight="24.0" prefWidth="24.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <ImageView fx:id="titleIcon" fitHeight="20.0" fitWidth="20.0" layoutX="-87.0" layoutY="-63.0" pickOnBounds="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.topAnchor="2.0">
                <image>
                   <Image url="@../graphics/temporaryIcon.jpg" />
@@ -40,22 +38,7 @@
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
         <content>
-          <AnchorPane prefHeight="370.0" prefWidth="590.0">
-               <children>
-                  <TextField alignment="CENTER" layoutX="221.0" layoutY="160.0" promptText="Username" />
-                  <PasswordField alignment="CENTER" layoutX="221.0" layoutY="185.0" promptText="Password" />
-                  <Button layoutX="345.0" layoutY="185.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
-                  <Button layoutX="295.0" layoutY="235.0" mnemonicParsing="false" text="Register" />
-                  <ImageView fitHeight="69.0" fitWidth="324.0" layoutX="135.0" layoutY="40.0" pickOnBounds="true">
-                     <image>
-                        <Image url="@../graphics/temporaryIcon.jpg" />
-                     </image>
-                  </ImageView>
-                  <PasswordField alignment="CENTER" layoutX="221.0" layoutY="210.0" promptText="Password Again" />
-                  <Button layoutX="345.0" layoutY="210.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
-                  <Button layoutX="254.0" layoutY="235.0" mnemonicParsing="false" text="Back" />
-               </children>
-            </AnchorPane>
+          <AnchorPane prefHeight="370.0" prefWidth="590.0" />
         </content>
       </ScrollPane>
    </center>
