--- a/bin/GradesScene.fxml
+++ b/bin/GradesScene.fxml
@@ -5,15 +5,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainControl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
    <children>
       <VBox prefHeight="370.0" prefWidth="590.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Label layoutX="281.0" layoutY="84.0" text="top half" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" />
-                  <Button fx:id="logingOutB" layoutX="524.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#logout" text="Logout" textAlignment="CENTER" />
+                  <Button fx:id="logOutButton" layoutX="524.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#logOut" text="Logout" textAlignment="CENTER" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
