--- a/src/RegisterScene.fxml
+++ b/src/RegisterScene.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegisterControl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegisterController">
    <children>
-      <Button layoutX="225.0" layoutY="245.0" mnemonicParsing="false" onMouseClicked="#back" prefHeight="25.0" prefWidth="75.0" text="Back" textAlignment="CENTER" />
+      <Button fx:id="backButton" layoutX="225.0" layoutY="245.0" mnemonicParsing="false" onMouseClicked="#backOut" prefHeight="25.0" prefWidth="75.0" text="Back" textAlignment="CENTER" />
       <Button layoutX="300.0" layoutY="245.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Register" />
       <ImageView fitHeight="82.0" fitWidth="326.0" layoutX="138.0" layoutY="68.0" pickOnBounds="true">
          <image>
