--- a/src/GradesScene.fxml
+++ b/src/GradesScene.fxml
@@ -15,28 +15,28 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="600.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
    <children>
       <HBox prefHeight="340.0" prefWidth="600.0">
          <children>
             <AnchorPane fx:id="leftBg" prefHeight="340.0" prefWidth="180.0">
                <children>
-                  <ImageView fx:id="statCardImg" fitHeight="170.0" fitWidth="120.0" layoutX="25.0" pickOnBounds="true">
+                  <ImageView id="pfp" fx:id="userPfpImg" fitHeight="40.0" fitWidth="40.0" layoutX="28.0" layoutY="8.0" pickOnBounds="true" AnchorPane.leftAnchor="38.0" AnchorPane.topAnchor="15.0">
                      <image>
                         <Image url="@../graphics/tempImg.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="userPfpImg" fitHeight="30.0" fitWidth="30.0" layoutX="28.0" layoutY="8.0" pickOnBounds="true">
+                  <ImageView id="statCard" fx:id="statCardImg" fitHeight="170.0" fitWidth="120.0" layoutX="25.0" pickOnBounds="true">
                      <image>
                         <Image url="@../graphics/tempImg.jpg" />
                      </image>
                   </ImageView>
-                  <Text fx:id="usernameText" layoutX="66.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="62.13671875" />
-                  <Text fx:id="userStatsText" layoutX="28.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stats blah blah blah " wrappingWidth="113.13671875" />
-                  <Button fx:id="importBtn" layoutX="2.0" layoutY="2.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
-                  <Button fx:id="exportBtn" layoutX="2.0" layoutY="27.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
-                  <Button fx:id="logoutBtn" layoutX="2.0" layoutY="52.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
-                  <Button fx:id="deleteAccBtn" layoutX="2.0" layoutY="77.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="64.0" />
+                  <Text fx:id="usernameText" layoutX="76.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="username" wrappingWidth="62.13671875" />
+                  <Text fx:id="userStatsText" layoutX="35.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cardText" text="Stats blah blah blah " wrappingWidth="113.13671875" />
+                  <Button id="exportBtn" fx:id="importBtn" layoutX="2.0" layoutY="2.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
+                  <Button id="importBtn" fx:id="exportBtn" layoutX="2.0" layoutY="27.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
+                  <Button id="deleteBtn" fx:id="logoutBtn" layoutX="2.0" layoutY="52.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
+                  <Button id="logoutBtn" fx:id="deleteAccBtn" layoutX="4.0" layoutY="98.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="150.0" />
                   <StackedBarChart fx:id="stackGraph" layoutX="2.0" layoutY="170.0" prefHeight="103.0" prefWidth="200.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
@@ -54,7 +54,7 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                   </LineChart>
-                  <Button fx:id="graphSettingsBtn" layoutX="163.0" layoutY="295.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+                  <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="163.0" layoutY="295.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
                </children>
             </AnchorPane>
             <ScrollPane fx:id="rightBg" prefHeight="340.0" prefWidth="442.0">
