--- a/bin/LoginScene.fxml
+++ b/bin/LoginScene.fxml
@@ -11,20 +11,21 @@
 
 <AnchorPane id="loginBg" fx:id="bgLoginScene" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="600.0" stylesheets="@css/loginStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
-      <Button fx:id="loginBtn" layoutX="387.0" layoutY="124.0" mnemonicParsing="false" onMouseClicked="#logIn" prefHeight="25.0" prefWidth="150.0" text="Login" />
+      <Button fx:id="loginBtn" layoutX="387.0" layoutY="124.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="25.0" prefWidth="150.0" text="Login" />
+      <Button fx:id="registerBtn" disable="true" layoutX="387.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#register" prefHeight="25.0" prefWidth="150.0" text="Register" visible="false" />
       <TextField fx:id="usernameIn" alignment="CENTER" layoutX="387.0" layoutY="99.0" prefHeight="25.0" prefWidth="150.0" promptText="Username">
          <contextMenu>
-            <ContextMenu fx:id="usernameLst">
+            <ContextMenu fx:id="usernameLst" x="20.0" y="20.0">
               <items>
-                <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                <MenuItem mnemonicParsing="false" text="asd" />
               </items>
             </ContextMenu>
          </contextMenu></TextField>
-      <ImageView id="noticeImg" fx:id="noteBubble" fitHeight="67.0" fitWidth="168.0" layoutX="197.0" layoutY="119.0" pickOnBounds="true">
+      <ImageView id="noticeImg" fx:id="noticeImg" fitHeight="67.0" fitWidth="168.0" layoutX="200.0" layoutY="130.0" pickOnBounds="true" styleClass="noticeOff">
          <image>
             <Image url="@../graphics/tempImg.jpg" />
          </image>
       </ImageView>
-      <Text id="noticeText" fx:id="noteText" layoutX="256.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Note:" wrappingWidth="184.13671875" />
+      <Text id="noticeText" fx:id="noticeText" layoutX="256.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="noticeOff" text="Note:" wrappingWidth="113.13671875" />
    </children>
 </AnchorPane>
