--- a/bin/WindowStage.fxml
+++ b/bin/WindowStage.fxml
@@ -2,7 +2,6 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,11 +11,11 @@
 
 <AnchorPane fx:id="stage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="620.0" stylesheets="@css/windowStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WindowController">
    <children>
-      <ScrollPane fx:id="scene" layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
-         <content>
-            <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="LoginScene.fxml" />
-         </content>
-      </ScrollPane>
+      <AnchorPane fx:id="scene" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <fx:include fx:id="content" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="LoginScene.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+      </AnchorPane>
       <AnchorPane id="titleBar" fx:id="titleBar" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Rectangle fx:id="moveHandle" arcHeight="5.0" arcWidth="5.0" fill="#1fff3d" height="20.0" layoutX="18.0" layoutY="10.0" onMouseDragged="#moveWindow2" onMousePressed="#moveWindow1" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="windowHandle" width="620.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -40,17 +39,17 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <Rectangle fx:id="rhT1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="604.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0" />
-      <Rectangle fx:id="rhB1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="604.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
-      <Rectangle fx:id="rhL1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="364.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="8.0" />
-      <Rectangle fx:id="rhR1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="364.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0" />
-      <Rectangle fx:id="rhTL1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="4.0" />
-      <Rectangle fx:id="rhTL2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Rectangle fx:id="rhTR1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0" />
-      <Rectangle fx:id="rhTR2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Rectangle fx:id="rhBL1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" />
-      <Rectangle fx:id="rhBL2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-      <Rectangle fx:id="rhBR1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="4.0" AnchorPane.rightAnchor="0.0" />
-      <Rectangle fx:id="rhBR2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Rectangle fx:id="rhT1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="604.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle fx:id="rhB1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="604.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+      <Rectangle fx:id="rhL1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="364.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="8.0" />
+      <Rectangle fx:id="rhR1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="364.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="8.0" />
+      <Rectangle fx:id="rhTL1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="4.0" />
+      <Rectangle fx:id="rhTL2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle fx:id="rhTR1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0" />
+      <Rectangle fx:id="rhTR2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle fx:id="rhBL1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" />
+      <Rectangle fx:id="rhBL2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+      <Rectangle fx:id="rhBR1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="4.0" AnchorPane.bottomAnchor="4.0" AnchorPane.rightAnchor="0.0" />
+      <Rectangle fx:id="rhBR2" arcHeight="5.0" arcWidth="5.0" disable="true" fill="DODGERBLUE" height="4.0" layoutX="10.0" layoutY="10.0" onMouseDragged="#resizeWindow2" onMousePressed="#resizeWindow1" stroke="BLACK" strokeType="INSIDE" styleClass="windowHandle" width="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
