--- a/src/GradesScene.fxml
+++ b/src/GradesScene.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="340.0" prefWidth="600.0" stylesheets="@css/gradeStyling.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradesController">
    <children>
-      <HBox prefHeight="340.0" prefWidth="600.0">
+      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane fx:id="leftBg" prefHeight="340.0" prefWidth="180.0">
                <children>
@@ -36,7 +36,7 @@
                   <Button id="exportBtn" fx:id="importBtn" layoutX="2.0" layoutY="2.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="4.0" />
                   <Button id="importBtn" fx:id="exportBtn" layoutX="2.0" layoutY="27.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="24.0" />
                   <Button id="deleteBtn" fx:id="logoutBtn" layoutX="2.0" layoutY="52.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="44.0" />
-                  <Button id="logoutBtn" fx:id="deleteAccBtn" layoutX="4.0" layoutY="98.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="150.0" />
+                  <Button id="logoutBtn" fx:id="deleteAccBtn" layoutX="4.0" layoutY="98.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="20.0" prefWidth="20.0" styleClass="leftBtn" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="150.0" />
                   <StackedBarChart fx:id="stackGraph" layoutX="2.0" layoutY="170.0" prefHeight="103.0" prefWidth="200.0">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
@@ -57,13 +57,13 @@
                   <Button id="settingBtn" fx:id="graphSettingsBtn" layoutX="163.0" layoutY="295.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
                </children>
             </AnchorPane>
-            <ScrollPane fx:id="rightBg" prefHeight="340.0" prefWidth="442.0">
+            <ScrollPane fx:id="rightBg" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="340.0" prefWidth="442.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="340.0" prefWidth="380.0">
+                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                      <children>
-                        <Accordion layoutX="6.0" layoutY="7.0" prefHeight="256.0" prefWidth="374.0">
+                        <Accordion layoutX="6.0" layoutY="7.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="374.0">
                           <panes>
-                            <TitledPane animated="false" prefHeight="206.0" prefWidth="326.0" text="sem1">
+                            <TitledPane animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="206.0" prefWidth="326.0" text="sem1">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
@@ -85,12 +85,12 @@
                                     </AnchorPane>
                               </content>
                             </TitledPane>
-                            <TitledPane animated="false" text="sem2">
+                            <TitledPane animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="sem2">
                               <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                               </content>
                             </TitledPane>
-                              <TitledPane animated="false" layoutX="10.0" layoutY="35.0" text="sem3">
+                              <TitledPane animated="false" layoutX="10.0" layoutY="35.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="sem3">
                                  <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                  </content>
